[package]
name = "randomart"
version = "1.0.0"
edition = "2021"

[lib]
name = "randomart"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "image-generation"

[[example]]
name = "compile-shader"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[dev-dependencies]
image = "0.25.5"
indicatif = "0.17.9"
